kustomize/overlays/specht-labs/grafana-mimir/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-nginx
  annotations:
    tailscale.com/tags: "tag:o11y-endpoint"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: mimir-nginx
      port:
        number: 80
  tls:
    - hosts:
        - mimir-nginx
      secretName: mimir-nginx-tls
